--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,12 @@
         <meta charset="utf-8">
         <title>PrimeNG DataViewLayoutDemo</title>
         <base href="/">
+
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://unpkg.com/primeflex/primeflex.css" rel="stylesheet" />
+        <link href="https://unpkg.com/primeicons/primeicons.css" rel="stylesheet" />
+        <link href="https://unpkg.com/quill@1.3.7/dist/quill.snow.css" rel="stylesheet" />
+        <link rel="icon" type="image/x-icon" href="https://primefaces.org/cdn/primeng/images/favicon.png">
     </head>
     <body>
         <app-root></app-root>
