--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>PrimeNG DataViewLayoutDemo</title>
+        <title>Movies Hub</title>
         <base href="/">
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
